# proga-paralela

context/: GUIA_REFERENCIA_MPI.md  SIMD_GUIDE_REUTILIZABLE.md
pp-cuda-estudiar/: CUDA.md  GUIA_REUTILIZABLE_CUDA.md
pp-cuda-estudiar/fractal_cuda/: CMakeLists.txt  fractal_common.h  fractal_cpu.cpp  fractal_cpu.h  kernel.cu  main.cpp  palette.cpp
pp-cuda-estudiar/fractal_cuda/context/: ENUNCIADO_P2.md
pp-mpi-estudiar/: .gitignore  Ejercicios_Propuestos_Examen_MPI.md  GUIA_BUILD_SIMD_OPENMP_MPI_CUDA.md  Que_es_MPI_explicado_con_analogias.md
pp-mpi-estudiar/correccion_prueba_Salvador/solucion-prueba1/: CMakeLists.txt  fractal_burning_ship.cpp  fractal_burning_ship.h  main.cpp
pp-mpi-estudiar/correccion_prueba_Salvador/solucion-prueba2/: CMakeLists.txt  arial_ttf.h  fractal_newton.cpp  main.cpp  palette.cpp
pp-mpi-estudiar/correcion_prueba/correc_p1_mpi/: draw_text.cpp  draw_text.h  fractal.cpp  fractal.h  main.cpp  palette.h
pp-mpi-estudiar/correcion_prueba/correc_p1_mpi/context/: ENUNCIADO_P1.md  contexto.txt
pp-mpi-estudiar/correcion_prueba/correc_p2_mpi/: CMakeLists.txt  fractal.cpp  fractal.h  main.cpp
pp-mpi-estudiar/correcion_prueba/correc_p2_mpi/context/: ENUNCIADO_P2.MD  GUIA_PLANTILLA_FRACTAL_MPI.md
pp-mpi-estudiar/mpi/: CMakeLists.txt  README.md  main.cpp
pp-mpi-estudiar/mpi-eje4/: CMakeLists.txt  README.md  main.cpp
pp-mpi-estudiar/mpi-eje9/: CMakeLists.txt  README.md  main.cpp
pp-mpi-estudiar/mpi-practice/: CMakeLists.txt  contexto.txt  eje1.txt  eje10.txt  eje2.txt  eje9.txt  main.cpp  palette.txt
pp-openmp-estudiar/: CMakeLists.txt  arial_ttf.h  fractal_newton.cpp  interfaz.cpp  main.cpp
pp-openmp-estudiar/context/: GUIA_REUTILIZABLE_OPENMP.md
pp-openmp-estudiar/fractal_openMP_p2/: CMakeLists.txt  fractal_newton.h  interfaz.h  main.cpp
pp-openmp-estudiar/fractal_openMP_p2/context/: ENUNCIADO_P1.md
pp-vectorizacion-SIMD-estudiar/: ENUNCIADO_P2.MD  README.md
pp-vectorizacion-SIMD-estudiar/fractal_SIMD_vectorizacion_p2/: CMakeLists.txt  fractal.h  fractal_scalar.cpp  fractal_simd.cpp  main.cpp  palette.cpp  params.h
pp-vectorizacion-SIMD-estudiar/fractal_SIMD_vectorizacion_p2/context/: ENUNCIADO_P2.md  README.md
